# Computacion-Grafica-OpenGl

Gl1/: CMakeLists.txt  main.cpp  myApplication.h  myWindow.cpp  myWindow.h
Gl1/cwc/include/: glsl.h
Gl1/cwc/source/: glutwindow.cpp
Gl1/freeglut/source/: freeglut_internal.h
Gl2/: CMakeLists.txt  main.cpp  myApplication.cpp  myWindow.cpp  myWindow.h  queue.cpp  queue.h
Gl2/cwc/source/: glWindow.cpp
